# pcv-stage2-dms-benchmark

./: .gitignore  README.zh-CN.md  pyproject.toml
docs/: MEASUREMENT_CONTRACT.zh-CN.md  PHASE0B_RUNTIME_SAMPLING_AND_RECORD_PLAN.zh-CN.md  PHASE0C_METADATA_INVENTORY_AND_SAMPLING.zh-CN.md  PHASE1A_PYTHON_PILOT.zh-CN.md  PHASE1B1_LEGACY_PYTHON_DISCREPANCY_AUDIT.zh-CN.md  PHASE1B2_PLY_BACKEND_ALIGNMENT.zh-CN.md  PHASE1B3_OPEN3D_IN_MEMORY_PYTHON_V2.zh-CN.md  PHASE1B4_NUMPY_PLY_PYTHON_V2.zh-CN.md  PHASE1B5_DMS_CONTRACT_CORRECTION.zh-CN.md  PHASE1B_PYTHON_CALIBRATION_AND_HANDOFF.zh-CN.md  PHASE2A_PYTHON_PATH_STAGE_PILOT_AND_HANDOFF.zh-CN.md  PROJECT_STATE_CURRENT.zh-CN.md
handoff/: python_frame1051_candidate_dms_v1.json  python_numpy_frame1051_candidate_dms_v2.json  python_path_stage_frame1051_candidate_dms_v1.json
reference/: Decode_Worker.js
results/: measurement_asset_status_v1.json  python_frame1051_calibration_v1.json  python_frame1051_measured_summary_v1.json  python_numpy_frame1051_calibration_v2.json  python_numpy_frame1051_measured_summary_v2.json  python_path_stage_frame1051_calibration_v1.json  python_path_stage_frame1051_measured_summary_v1.json
src/pcv_dms_benchmark/: __init__.py  calibration.py  cli.py  derived_export.py  measurement_records.py  measurement_stats.py  python_benchmark.py  (+6 more)
tests/: test_calibration.py  test_derived_export.py  test_measurement_records.py  test_metadata_inventory.py  test_numpy_ply_backend.py  test_open3d_python_backend.py  test_ply_backend_alignment.py  test_python_benchmark.py  test_python_path_stage.py  test_sampling_plan.py
(+2 files in other folders)
