[project]
name = "pcv-stage2-dms-benchmark"
version = "0.0.0"
description = "Stage2 d_ms metadata planning and Python pilot benchmark utilities."
requires-python = ">=3.10"
dependencies = [
    "DracoPy==2.0.0",
    "numpy==2.5.1",
    "plyfile==1.1.4",
]

[project.optional-dependencies]
ply-backend-alignment = ["open3d==0.19.0"]

[tool.unittest]
start-directory = "tests"
